# three-bell-timer

./: .gitignore  README.md  README_ja-JP.md  pyproject.toml
src/presen_time_bar/: __init__.py  presen_time_bar.py
src/three_bell_timer/: __about__.py  __init__.py  main.py  three_bell_timer.py  utils.py
src/three_bell_timer/data/: memo.md
