[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presen-time-bar"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "PyQt5",
]

[tool.hatch.version]
path = "src/presen_time_bar/__about__.py"

[project.scripts]
presen-time-bar = "presen_time_bar:main"

