[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "three-bell-timer"
dynamic = ["version"]
description = 'A lightweight timer designed for presentations.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "PyQt5"
]

[tool.hatch.version]
path = "src/three_bell_timer/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
  "data/*.png",
  "data/*.ico"
]

[project.gui-scripts]
3bt = "three_bell_timer:main"

